@@ -40,9 +40,6 @@ class DummyIPShell(object):
     IP = Dummy()
     IP.BANNER = 'foo'
 
-    def set_banner(self, banner):
-        self.banner = banner
-
     def __call__(self):
         self.called = True
 
@@ -157,3 +154,23 @@ class DummyBootstrap(object):
             'root_factory': self.root_factory,
             'closer': self.closer,
         }
+
+
+class DummyEntryPoint(object):
+    def __init__(self, name, module):
+        self.name = name
+        self.module = module
+
+    def load(self):
+        return self.module
+
+
+class DummyPkgResources(object):
+    def __init__(self, entry_point_values):
+        self.entry_points = []
+
+        for name, module in entry_point_values.items():
+            self.entry_points.append(DummyEntryPoint(name, module))
+
+    def iter_entry_points(self, name):
+        return self.entry_points
