@@ -2,6 +2,7 @@ import os
 import unittest
 from pyramid.tests.test_scripts import dummy
 
+
 class TestPShellCommand(unittest.TestCase):
     def _getTargetClass(self):
         from pyramid.scripts.pshell import PShellCommand
@@ -10,6 +11,7 @@ class TestPShellCommand(unittest.TestCase):
     def _makeOne(self, patch_bootstrap=True, patch_config=True,
                  patch_args=True, patch_options=True):
         cmd = self._getTargetClass()([])
+
         if patch_bootstrap:
             self.bootstrap = dummy.DummyBootstrap()
             cmd.bootstrap = (self.bootstrap,)
@@ -25,10 +27,14 @@ class TestPShellCommand(unittest.TestCase):
             self.options.python_shell = ''
             self.options.setup = None
             cmd.options = self.options
+
         # default to None to prevent side-effects from running tests in
         # unknown environments
         cmd.pystartup = None
         return cmd
+
+    def _makeEntryPoints(self, command, shells):
+        command.pkg_resources = dummy.DummyPkgResources(shells)
 
     def test_make_default_shell(self):
         command = self._makeOne()
@@ -49,36 +55,23 @@ class TestPShellCommand(unittest.TestCase):
     def test_make_ipython_v1_1_shell(self):
         command = self._makeOne()
         ipshell_factory = dummy.DummyIPShellFactory()
-        shell = command.make_ipython_v1_1_shell(ipshell_factory)
+        shell = command.make_ipython_shell(ipshell_factory)
         shell({'foo': 'bar'}, 'a help message')
         self.assertEqual(ipshell_factory.kw['user_ns'], {'foo': 'bar'})
         self.assertTrue('a help message' in ipshell_factory.kw['banner2'])
-        self.assertTrue(ipshell_factory.shell.called)
-
-    def test_make_ipython_v0_11_shell(self):
-        command = self._makeOne()
-        ipshell_factory = dummy.DummyIPShellFactory()
-        shell = command.make_ipython_v0_11_shell(ipshell_factory)
-        shell({'foo': 'bar'}, 'a help message')
-        self.assertEqual(ipshell_factory.kw['user_ns'], {'foo': 'bar'})
-        self.assertTrue('a help message' in ipshell_factory.kw['banner2'])
-        self.assertTrue(ipshell_factory.shell.called)
-
-    def test_make_ipython_v0_10_shell(self):
-        command = self._makeOne()
-        ipshell_factory = dummy.DummyIPShellFactory()
-        shell = command.make_ipython_v0_10_shell(ipshell_factory)
-        shell({'foo': 'bar'}, 'a help message')
-        self.assertEqual(ipshell_factory.kw['argv'], [])
-        self.assertEqual(ipshell_factory.kw['user_ns'], {'foo': 'bar'})
-        self.assertTrue('a help message' in ipshell_factory.shell.banner)
         self.assertTrue(ipshell_factory.shell.called)
 
     def test_command_loads_default_shell(self):
         command = self._makeOne()
         shell = dummy.DummyShell()
-        command.make_ipython_shell = lambda: None
-        command.make_bpython_shell = lambda: None
+        self._makeEntryPoints(
+            command,
+            {
+                'ipython': lambda: None,
+                'bpython': lambda: None,
+            }
+        )
+
         command.make_default_shell = lambda: shell
         command.run()
         self.assertTrue(self.config_factory.parser)
@@ -96,82 +89,50 @@ class TestPShellCommand(unittest.TestCase):
 
     def test_command_loads_default_shell_with_unknown_shell(self):
         command = self._makeOne()
+        out_calls = []
+
+        def out(msg):
+            out_calls.append(msg)
+
+        command.out = out
+
         shell = dummy.DummyShell()
         bad_shell = dummy.DummyShell()
-        command.make_ipython_shell = lambda: bad_shell
-        command.make_bpython_shell = lambda: bad_shell
+
+        self._makeEntryPoints(
+            command,
+            {
+                'ipython': lambda: bad_shell,
+                'bpython': lambda: bad_shell,
+            }
+        )
+
         command.make_default_shell = lambda: shell
-        command.options.python_shell = 'unknow_python_shell'
-        command.run()
+        command.options.python_shell = 'unknown_python_shell'
+        result = command.run()
+        self.assertEqual(result, 1)
+        self.assertEqual(
+            out_calls, ['could not find a shell named "unknown_python_shell"']
+        )
         self.assertTrue(self.config_factory.parser)
         self.assertEqual(self.config_factory.parser.filename,
                          '/foo/bar/myapp.ini')
         self.assertEqual(self.bootstrap.a[0], '/foo/bar/myapp.ini#myapp')
-        self.assertEqual(shell.env, {
-            'app':self.bootstrap.app, 'root':self.bootstrap.root,
-            'registry':self.bootstrap.registry,
-            'request':self.bootstrap.request,
-            'root_factory':self.bootstrap.root_factory,
-        })
-        self.assertEqual(bad_shell.env, {})
         self.assertTrue(self.bootstrap.closer.called)
-        self.assertTrue(shell.help)
 
     def test_command_loads_ipython_v1_1(self):
         command = self._makeOne()
         shell = dummy.DummyShell()
-        command.make_ipython_v1_1_shell = lambda: shell
-        command.make_ipython_v0_11_shell = lambda: None
-        command.make_ipython_v0_10_shell = lambda: None
-        command.make_bpython_shell = lambda: None
-        command.make_default_shell = lambda: None
-        command.options.python_shell = 'ipython'
-        command.run()
-        self.assertTrue(self.config_factory.parser)
-        self.assertEqual(self.config_factory.parser.filename,
-                         '/foo/bar/myapp.ini')
-        self.assertEqual(self.bootstrap.a[0], '/foo/bar/myapp.ini#myapp')
-        self.assertEqual(shell.env, {
-            'app':self.bootstrap.app, 'root':self.bootstrap.root,
-            'registry':self.bootstrap.registry,
-            'request':self.bootstrap.request,
-            'root_factory':self.bootstrap.root_factory,
-        })
-        self.assertTrue(self.bootstrap.closer.called)
-        self.assertTrue(shell.help)
+        self._makeEntryPoints(
+            command,
+            {
+                'ipython': lambda: shell,
+                'bpython': lambda: bad_shell,
+            }
+        )
 
-    def test_command_loads_ipython_v0_11(self):
-        command = self._makeOne()
-        shell = dummy.DummyShell()
-        command.make_ipython_v1_1_shell = lambda: None
-        command.make_ipython_v0_11_shell = lambda: shell
-        command.make_ipython_v0_10_shell = lambda: None
-        command.make_bpython_shell = lambda: None
-        command.make_default_shell = lambda: None
         command.options.python_shell = 'ipython'
-        command.run()
-        self.assertTrue(self.config_factory.parser)
-        self.assertEqual(self.config_factory.parser.filename,
-                         '/foo/bar/myapp.ini')
-        self.assertEqual(self.bootstrap.a[0], '/foo/bar/myapp.ini#myapp')
-        self.assertEqual(shell.env, {
-            'app':self.bootstrap.app, 'root':self.bootstrap.root,
-            'registry':self.bootstrap.registry,
-            'request':self.bootstrap.request,
-            'root_factory':self.bootstrap.root_factory,
-        })
-        self.assertTrue(self.bootstrap.closer.called)
-        self.assertTrue(shell.help)
 
-    def test_command_loads_ipython_v0_10(self):
-        command = self._makeOne()
-        shell = dummy.DummyShell()
-        command.make_ipython_v1_1_shell = lambda: None
-        command.make_ipython_v0_11_shell = lambda: None
-        command.make_ipython_v0_10_shell = lambda: shell
-        command.make_bpython_shell = lambda: None
-        command.make_default_shell = lambda: None
-        command.options.python_shell = 'ipython'
         command.run()
         self.assertTrue(self.config_factory.parser)
         self.assertEqual(self.config_factory.parser.filename,
@@ -189,8 +150,15 @@ class TestPShellCommand(unittest.TestCase):
     def test_command_loads_bpython_shell(self):
         command = self._makeOne()
         shell = dummy.DummyBPythonShell()
-        command.make_ipython_shell = lambda: None
-        command.make_bpython_shell = lambda: shell
+
+        self._makeEntryPoints(
+            command,
+            {
+                'ipython': lambda: None,
+                'bpython': lambda: shell,
+            }
+        )
+
         command.options.python_shell = 'bpython'
         command.run()
         self.assertTrue(self.config_factory.parser)
@@ -206,37 +174,36 @@ class TestPShellCommand(unittest.TestCase):
         self.assertTrue(self.bootstrap.closer.called)
         self.assertTrue(shell.banner)
 
-    def test_shell_ipython_ordering(self):
+    def test_shell_entry_points(self):
         command = self._makeOne()
-        shell1_1 = dummy.DummyShell()
-        shell0_11 = dummy.DummyShell()
-        shell0_10 = dummy.DummyShell()
-        command.make_ipython_v1_1_shell = lambda: shell1_1
-        shell = command.make_shell()
-        self.assertEqual(shell, shell1_1)
+        dshell = dummy.DummyShell()
 
-        command.make_ipython_v1_1_shell = lambda: None
-        command.make_ipython_v0_11_shell = lambda: shell0_11
-        shell = command.make_shell()
-        self.assertEqual(shell, shell0_11)
+        self._makeEntryPoints(
+            command,
+            {
+                'ipython': lambda: dshell,
+                'bpython': lambda: dshell,
+            }
+        )
 
-        command.make_ipython_v0_11_shell = lambda: None
-        command.make_ipython_v0_10_shell = lambda: shell0_10
+        command.make_default_shell = lambda: None
         shell = command.make_shell()
-        self.assertEqual(shell, shell0_10)
-
-        command.options.python_shell = 'ipython'
-        command.make_ipython_v1_1_shell = lambda: shell1_1
-        shell = command.make_shell()
-        self.assertEqual(shell, shell1_1)
+        self.assertEqual(shell, dshell)
 
     def test_shell_ordering(self):
         command = self._makeOne()
         ipshell = dummy.DummyShell()
         bpshell = dummy.DummyShell()
         dshell = dummy.DummyShell()
-        command.make_ipython_shell = lambda: None
-        command.make_bpython_shell = lambda: None
+
+        self._makeEntryPoints(
+            command,
+            {
+                'ipython': lambda: None,
+                'bpython': lambda: None,
+            }
+        )
+
         command.make_default_shell = lambda: dshell
 
         shell = command.make_shell()
@@ -250,8 +217,15 @@ class TestPShellCommand(unittest.TestCase):
         shell = command.make_shell()
         self.assertEqual(shell, dshell)
 
-        command.make_ipython_shell = lambda: ipshell
-        command.make_bpython_shell = lambda: bpshell
+        self._makeEntryPoints(
+            command,
+            {
+                'ipython': lambda: ipshell,
+                'bpython': lambda: bpshell,
+                'python': lambda: dshell,
+            }
+        )
+
         command.options.python_shell = 'ipython'
         shell = command.make_shell()
         self.assertEqual(shell, ipshell)
